# farsante

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: release.yaml
data/: iris.csv  people.csv
farsante/: __init__.py  dask_dfs.py  dask_generators.py  h2o_dataset_create.py  h2o_dataset_create_all.py  pyspark_dfs.py  pyspark_generators.py
h2o-data-rust/: Cargo.toml  README.md
h2o-data-rust/src/: generators.rs  helpers.rs  lib.rs  main.rs
python/farsante/: __init__.py  h2o_dataset_create.py  h2o_dataset_create_all.py  pandas_dfs.py  pandas_generators.py  pyspark_dfs.py  pyspark_generators.py
src/: lib.rs
tests/: conftest.py  test_dask_dfs.py  test_dask_generators.py  test_fake_file_creation.py  test_h2o_datasets.py  test_pandas_dfs.py  test_pandas_generators.py  test_pyspark_dfs.py  test_pyspark_generators.py
tests/test_files/: G1_1e3_1e3_10_10.csv
