[package]
name = "farsante"
version = "0.1.0"
edition = "2021"

[lib]
name = "farsante"
crate-type = ["cdylib"]

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
kdam = { version = "0.5.0" }
rand = { version = "0.8.5" }
rand_chacha = { version = "0.3.1" }
pyo3 = { version = "0.20.0", features = ["extension-module"] }
