[tool.poetry]
name = "farsante"
version = "0.2.0"
description = "Fake DataFrame generators for Pandas and PySpark"
authors = ["MrPowers <matthewkevinpowers@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8 <4.0"
mimesis = "6.0.0"
pyspark = "^3.3.1"
pandas = ">=1.0.0"
pyarrow = "11.0.0"
maturin = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "7.2.0"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
# requires = ["poetry>=0.12"]

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
