[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "farsante"
version = "0.2.0"
description = "Fake DataFrame generators for Pandas and PySpark"
authors = [{ name = "MrPowers", email = "matthewkevinpowers@gmail.com" }]
requires-python = ">=3.8,<4.0"
dependencies = [
  "mimesis == 6.0.0",
  "pyspark >= 3.3",
  "pandas >=1.0.0",
  "pyarrow >= 11.0.0",
  "maturin >= 1.3.2",
]

[project.optional-dependencies]
test = ["pytest >= 7.2"]

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
python-source = "python"
python-packages = ["farsante"]
module-name = "farsante_rs"
bindings = "pyo3"
